--- a/solutions.css
+++ b/solutions.css
@@ -2,6 +2,10 @@
     background-color: red;
     transition: ease-in-out 2s;
 }
+.ex-1-square:not(:active){
+    transition: ease-in-out 2s;
+}
+
 
 .ex-2-square:active{
     width: 100%;
